Actualizaciona a niveles del CAPC
Actualizaciones aniveles del capce

--- a/TableroSLAs/CalificaIncidenteSAT.html
+++ b/TableroSLAs/CalificaIncidenteSAT.html
@@ -351,12 +351,9 @@
                 </tr>
                 <!-- END Error -->
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_incidenteCumple_DISP_SOPORTE">Disponibilidad del Personal de Soporte </label></td> 
+                  <td class="th"></td> 
                   <td>
-                    <select name="{Cumple_DISP_SOPORTE_Name}" id="mc_calificacion_incidenteCumple_DISP_SOPORTE">
-                      <option value="">Seleccionar Valor</option>
-                      {Cumple_DISP_SOPORTE_Options}
-                    </select>
+                    <input type="hidden" name="{Cumple_DISP_SOPORTE_Name}" value="{Cumple_DISP_SOPORTE}" id="mc_calificacion_incidenteCumple_DISP_SOPORTE">
  </td>
                 </tr>
  
