--- a/TableroSLAs/CalificaPPMCSAT.html
+++ b/TableroSLAs/CalificaPPMCSAT.html
@@ -135,14 +135,8 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreCOMPL_RUTA_CRITICA">Completar Tareas<br>
-                    en Ruta Crítica</label></td> 
-                  <td class="th1">
-                    <select id="calificacion_rs_AUTpnlCierreCOMPL_RUTA_CRITICA" name="{COMPL_RUTA_CRITICA_Name}">
-                      <option selected value="">No Aplica</option>
-                      {COMPL_RUTA_CRITICA_Options}
-                    </select>
- </td>
+                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreCOMPL_RUTA_CRITICA">&nbsp;</label></td> 
+                  <td class="th1">&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
@@ -154,8 +148,7 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreEST_PROY">Estimación de Proyectos<br>
-                    (Costo Actual vs. Costo Estimado)</label></td> 
+                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreEST_PROY">Calidad de Código</label></td> 
                   <td class="th1">
                     <select id="calificacion_rs_AUTpnlCierreEST_PROY" name="{EST_PROY_Name}">
                       <option selected value="">No Aplica</option>
