Corrección a Tablero de Niveles de servicio
-  Agrega semáforo de calidad de código (img)
- Se modifican las urls de las evidencias, url y código generador

--- a/TableroSLAs/PPMCsApbDetalleRSxls.html
+++ b/TableroSLAs/PPMCsApbDetalleRSxls.html
@@ -30,10 +30,10 @@
     <td>&nbsp; 
       <!-- BEGIN Record grdDetalleRS1 -->
       <form id="grdDetalleRS1" method="post" name="{HTMLFormName}" action="{Action}">
-        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td valign="top">
-              <table class="Header" cellspacing="0" cellpadding="0" border="0">
+              <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Buscar</strong></td> 
@@ -73,7 +73,7 @@
  
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="6">
-                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="grdDetalleRS1Button_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="grdDetalleRS1Button_DoSearch" class="Button" value="Buscar" alt="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
                 </tr>
               </table>
             </td>
@@ -91,10 +91,10 @@
   <tr>
     <td colspan="2">&nbsp; 
       <!-- BEGIN Grid grdDetalleRS -->
-      <table id="grdDetalleRS" class="MainTable" cellspacing="0" cellpadding="0" border="0">
+      <table id="grdDetalleRS" class="MainTable" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td valign="top">
-            <table class="Header" cellspacing="0" cellpadding="0" border="0">
+            <table class="Header" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                 <td class="th"><strong>DetalleRS </strong></td> 
