Corrección en la generación de reporte de slos
Corrección en la generación de reporte de slos

--- a/TableroSLAs/TableroExcel.html
+++ b/TableroSLAs/TableroExcel.html
@@ -77,10 +77,10 @@ jQuery(function ($) {
         <p><br>
         </p>
  
-        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td valign="top">
-              <table class="Header" cellspacing="0" cellpadding="0" border="0">
+              <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Buscar Reporte</strong></td> 
@@ -124,7 +124,7 @@ jQuery(function ($) {
  
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="10">
-                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_reporte_ns1Button_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_reporte_ns1Button_DoSearch" class="Button" value="Buscar" alt="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
                 </tr>
               </table>
             </td>
@@ -149,10 +149,10 @@ jQuery(function ($) {
       <!-- BEGIN Panel Panel1 -->
       <!-- BEGIN Record mc_reporte_ns -->
       <form id="Panel1mc_reporte_ns" method="post" name="{HTMLFormName}" action="{Action}">
-        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td valign="top">
-              <table class="Header" cellspacing="0" cellpadding="0" border="0">
+              <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Caratula del Informe</strong></td> 
@@ -248,9 +248,9 @@ jQuery(function ($) {
  
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="6">
-                    <!-- BEGIN Button Button_Insert --><input type="submit" id="Panel1mc_reporte_nsButton_Insert" class="Button" alt="Agregar" value="Generar" name="{Button_Name}"><!-- END Button Button_Insert -->
-                    <!-- BEGIN Button Button_Update --><input type="submit" id="Panel1mc_reporte_nsButton_Update" class="Button" alt="Enviar" value="Ver" name="{Button_Name}"><!-- END Button Button_Update -->
-                    <!-- BEGIN Button Button_Delete --><input type="submit" id="Panel1mc_reporte_nsButton_Delete" class="Button" alt="Borrar" value="Borrar" name="{Button_Name}"><!-- END Button Button_Delete --></td>
+                    <!-- BEGIN Button Button_Insert --><input type="submit" id="Panel1mc_reporte_nsButton_Insert" class="Button" value="Generar" alt="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
+                    <!-- BEGIN Button Button_Update --><input type="submit" id="Panel1mc_reporte_nsButton_Update" class="Button" value="Ver" alt="Enviar" name="{Button_Name}"><!-- END Button Button_Update -->
+                    <!-- BEGIN Button Button_Delete --><input type="submit" id="Panel1mc_reporte_nsButton_Delete" class="Button" value="Borrar" alt="Borrar" name="{Button_Name}"><!-- END Button Button_Delete --></td>
                 </tr>
               </table>
             </td>
