--- a/TableroSLAs/MainAdmin.html
+++ b/TableroSLAs/MainAdmin.html
@@ -12,15 +12,19 @@
 <p>&nbsp; 
 <table width="100%">
   <tr>
-    <td>&nbsp;<a href="{Link1_Src}" id="Link1">Aplicaciones</a></td> 
-    <td><a href="{Link2_Src}" id="Link2">Dictamenes</a></td> 
-    <td><a href="{Link3_Src}" id="Link3">Servicios de Negocio</a></td> 
-    <td><a href="{Link6_Src}" id="Link6">No Medibles</a></td> 
-    <td><a href="{Link5_Src}" id="Link5">Costo Fijo Mensual</a></td> 
-    <td><a href="{Link7_Src}" id="Link7">Gráficas</a></td> 
-    <td><!-- BEGIN Link Link8 --><a href="{Link8_Src}" id="Link8">Reportes MyM</a><!-- END Link Link8 --></td> 
-    <td><a href="{Link4_Src}" id="Link4">Usuarios</a></td>
-    <td><!-- BEGIN Link Link9 --><a href="{Link9_Src}" id="Link9">Carga de Datos</a><!-- END Link Link9 --></td>
+    <td>&nbsp;<!-- BEGIN Link Link1 --><a href="{Link1_Src}" id="Link1">Aplicaciones</a><!-- END Link Link1 --></td> 
+    <td><!-- BEGIN Link Link2 --><a href="{Link2_Src}" id="Link2">Dictamenes</a><!-- END Link Link2 --></td> 
+    <td><!-- BEGIN Link Link3 --><a href="{Link3_Src}" id="Link3">Servicios de Negocio</a><!-- END Link Link3 --></td> 
+    <td><!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="Link6">No Medibles</a><!-- END Link Link6 --></td> 
+    <td><!-- BEGIN Link Link5 --><a href="{Link5_Src}" id="Link5">Costo Fijo Mensual</a><!-- END Link Link5 --></td> 
+    <td><!-- BEGIN Link Link7 --><a href="{Link7_Src}" id="Link7">Gráficas</a><!-- END Link Link7 --></td> 
+    <td>
+      <!-- BEGIN Link Link8 --><a href="{Link8_Src}" id="Link8">Reportes MyM</a><!-- END Link Link8 --></td> 
+    <td><!-- BEGIN Link Link4 --><a href="{Link4_Src}" id="Link4">Usuarios</a><!-- END Link Link4 --></td> 
+    <td>
+      <!-- BEGIN Link Link9 --><a href="{Link9_Src}" id="Link9">Carga de Datos</a>
+      <!-- END Link Link9 --></td> 
+    <td><a href="{Link10_Src}" id="Link10">Mapeo RAPEs</a></td>
   </tr>
 </table>
 </p>
