--- a/TableroSLAs/SLAsCAPCLista.html
+++ b/TableroSLAs/SLAsCAPCLista.html
@@ -24,12 +24,13 @@
 <link rel="stylesheet" type="text/css" href="Styles/{CCS_Style}/jquery-ui.css">
 </head>
 <body>
-<p>{Header}</p>
-<p><br>
-</p>
-<p><br>
-</p>
+{Header}<br>
 <table width="100%">
+  <tr>
+    <td>&nbsp;{SLAsCAPCMenu}</td> 
+    <td>&nbsp;</td> 
+  </tr>
+ 
   <tr>
     <td>
       <!-- BEGIN Record mc_calificacion_capc -->
@@ -202,16 +203,16 @@
                 <td>{Descripcion}&nbsp;</td> 
                 <td><a href="{Agrupador_Src}" id="mc_c_ServContractual_mc_cAgrupador_{mc_c_ServContractual_mc_c:rowNumber}">{Agrupador}</a>&nbsp;</td> 
                 <td style="TEXT-ALIGN: center">{HERR_EST_COST}&nbsp; 
-                  <!-- BEGIN ImageLink Img_HERR_EST_COST --><a href="{Img_HERR_EST_COST}" id="mc_c_ServContractual_mc_cImg_HERR_EST_COST_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_HERR_EST_COST_Src}" style="border: 0px;" alt="{Img_HERR_EST_COST}"></a><!-- END ImageLink Img_HERR_EST_COST --></td> 
+                  <!-- BEGIN ImageLink Img_HERR_EST_COST --><a href="{Img_HERR_EST_COST}" id="mc_c_ServContractual_mc_cImg_HERR_EST_COST_{mc_c_ServContractual_mc_c:rowNumber}"><img style="BORDER-TOP: 0px; BORDER-RIGHT: 0px; BORDER-BOTTOM: 0px; BORDER-LEFT: 0px" alt="{Img_HERR_EST_COST}" src="{Img_HERR_EST_COST_Src}"></a><!-- END ImageLink Img_HERR_EST_COST --></td> 
                 <td style="TEXT-ALIGN: center">{REQ_SERV}&nbsp; 
-                  <!-- BEGIN ImageLink Img_REQ_SERV --><a href="{Img_REQ_SERV}" id="mc_c_ServContractual_mc_cImg_REQ_SERV_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_REQ_SERV_Src}" style="border: 0px;" alt="{Img_REQ_SERV}"></a><!-- END ImageLink Img_REQ_SERV --></td> 
-                <td style="TEXT-ALIGN: center"><a href="{CUMPL_REQ_FUN_Src}" id="mc_c_ServContractual_mc_cCUMPL_REQ_FUN_{mc_c_ServContractual_mc_c:rowNumber}">{CUMPL_REQ_FUN}</a>&nbsp;<a href="{Img_CUMPL_REQ_FUN}" id="mc_c_ServContractual_mc_cImg_CUMPL_REQ_FUN_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_CUMPL_REQ_FUN_Src}" style="border: 0px;" alt="{Img_CUMPL_REQ_FUN}"></a></td> 
-                <td style="TEXT-ALIGN: center"><a href="{CALIDAD_PROD_TERM_Src}" id="mc_c_ServContractual_mc_cCALIDAD_PROD_TERM_{mc_c_ServContractual_mc_c:rowNumber}">{CALIDAD_PROD_TERM}</a>&nbsp;<a href="{Img_CALIDAD_PROD_TERM}" id="mc_c_ServContractual_mc_cImg_CALIDAD_PROD_TERM_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_CALIDAD_PROD_TERM_Src}" style="border: 0px;" alt="{Img_CALIDAD_PROD_TERM}"></a></td> 
-                <td style="TEXT-ALIGN: center">{DEDUC_OMISION}&nbsp;<a href="{Img_DEDUC_OMISION}" id="mc_c_ServContractual_mc_cImg_DEDUC_OMISION_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_DEDUC_OMISION_Src}" style="border: 0px;" alt="{Img_DEDUC_OMISION}"></a></td> 
+                  <!-- BEGIN ImageLink Img_REQ_SERV --><a href="{Img_REQ_SERV}" id="mc_c_ServContractual_mc_cImg_REQ_SERV_{mc_c_ServContractual_mc_c:rowNumber}"><img style="BORDER-TOP: 0px; BORDER-RIGHT: 0px; BORDER-BOTTOM: 0px; BORDER-LEFT: 0px" alt="{Img_REQ_SERV}" src="{Img_REQ_SERV_Src}"></a><!-- END ImageLink Img_REQ_SERV --></td> 
+                <td style="TEXT-ALIGN: center"><a href="{CUMPL_REQ_FUN_Src}" id="mc_c_ServContractual_mc_cCUMPL_REQ_FUN_{mc_c_ServContractual_mc_c:rowNumber}">{CUMPL_REQ_FUN}</a>&nbsp;<a href="{Img_CUMPL_REQ_FUN}" id="mc_c_ServContractual_mc_cImg_CUMPL_REQ_FUN_{mc_c_ServContractual_mc_c:rowNumber}"><img style="BORDER-TOP: 0px; BORDER-RIGHT: 0px; BORDER-BOTTOM: 0px; BORDER-LEFT: 0px" alt="{Img_CUMPL_REQ_FUN}" src="{Img_CUMPL_REQ_FUN_Src}"></a></td> 
+                <td style="TEXT-ALIGN: center"><a href="{CALIDAD_PROD_TERM_Src}" id="mc_c_ServContractual_mc_cCALIDAD_PROD_TERM_{mc_c_ServContractual_mc_c:rowNumber}">{CALIDAD_PROD_TERM}</a>&nbsp;<a href="{Img_CALIDAD_PROD_TERM}" id="mc_c_ServContractual_mc_cImg_CALIDAD_PROD_TERM_{mc_c_ServContractual_mc_c:rowNumber}"><img style="BORDER-TOP: 0px; BORDER-RIGHT: 0px; BORDER-BOTTOM: 0px; BORDER-LEFT: 0px" alt="{Img_CALIDAD_PROD_TERM}" src="{Img_CALIDAD_PROD_TERM_Src}"></a></td> 
+                <td style="TEXT-ALIGN: center"><a href="{DEDUC_OMISION_Src}" id="mc_c_ServContractual_mc_cDEDUC_OMISION_{mc_c_ServContractual_mc_c:rowNumber}">{DEDUC_OMISION}</a>&nbsp;<a href="{Img_DEDUC_OMISION}" id="mc_c_ServContractual_mc_cImg_DEDUC_OMISION_{mc_c_ServContractual_mc_c:rowNumber}"><img style="BORDER-TOP: 0px; BORDER-RIGHT: 0px; BORDER-BOTTOM: 0px; BORDER-LEFT: 0px" alt="{Img_DEDUC_OMISION}" src="{Img_DEDUC_OMISION_Src}"></a></td> 
                 <td style="TEXT-ALIGN: center">{EFIC_PRESUP}&nbsp;<img id="mc_c_ServContractual_mc_cImg_EFIC_PRESUP_{mc_c_ServContractual_mc_c:rowNumber}" alt="" src="{Img_EFIC_PRESUP}"></td> 
-                <td style="TEXT-ALIGN: center">{RETR_ENTREGABLE}&nbsp;<a href="{Img_RETR_ENTREGABLE}" id="mc_c_ServContractual_mc_cImg_RETR_ENTREGABLE_{mc_c_ServContractual_mc_c:rowNumber}"><img src="{Img_RETR_ENTREGABLE_Src}" style="border: 0px;" alt="{Img_RETR_ENTREGABLE}"></a></td> 
-                <td>{Obs_AP}<br />
-                  {DetalleCalidad}<br />
+                <td style="TEXT-ALIGN: center"><a href="{RETR_ENTREGABLE_Src}" id="mc_c_ServContractual_mc_cRETR_ENTREGABLE_{mc_c_ServContractual_mc_c:rowNumber}">{RETR_ENTREGABLE}</a>&nbsp;<a href="{Img_RETR_ENTREGABLE}" id="mc_c_ServContractual_mc_cImg_RETR_ENTREGABLE_{mc_c_ServContractual_mc_c:rowNumber}"><img style="BORDER-TOP: 0px; BORDER-RIGHT: 0px; BORDER-BOTTOM: 0px; BORDER-LEFT: 0px" alt="{Img_RETR_ENTREGABLE}" src="{Img_RETR_ENTREGABLE_Src}"></a></td> 
+                <td>{Obs_AP}<br>
+                  {DetalleCalidad}<br>
                   {Observaciones}&nbsp;</td> 
               </tr>
  <!-- END Row -->
