--- a/TableroSLAs/SLAsCapcApbDetalle.html
+++ b/TableroSLAs/SLAsCapcApbDetalle.html
@@ -725,6 +725,11 @@ jQuery(function ($) {
                 </tr>
  
                 <tr class="Controls">
+                  <td class="th">&nbsp;SLO</td> 
+                  <td><label for="mc_info_rs_ap_ECSLO" style="display: none;">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECSLO" value="1" name="{SLO_Name}" {SLO}>&nbsp;</td>
+                </tr>
+ 
+                <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_ap_ECId_Proveedor">Proveedor</label></td> 
                   <td>
                     <div id="Id_Proveedor">
